fix: button alignment

--- a/src/components/Common/UI/Button/Button.module.scss
+++ b/src/components/Common/UI/Button/Button.module.scss
@@ -4,6 +4,7 @@
     border: none;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     gap: toRem(4);
     color: var(--g-colorPrimaryContent);
     background: var(--g-colorPrimary);
